# ComfyUI-Pixal3D

./: .gitignore  LICENSE  NOTICE.md  README.md  __init__.py  install.py  prestartup_script.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: BUILD_NATTEN.md  NODES.md
nodes/: nodes_pixal3d.py  pixal3d_stages.py
patches/: birefnet_inference_mode.py  naf_attentions.py
workflows/: pixal3d_image_to_mesh.json  pixal3d_image_to_mesh_with_external_rembg.json
